starting work on more experiments for VICET paper-- setting up full HD Map of parkland mound

--- a/v3/nerf/desk_demo.ipynb
+++ b/v3/nerf/desk_demo.ipynb
@@ -12,10 +12,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "dc949426",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-14 11:08:12.356144: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-10-14 11:08:12.436008: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2023-10-14 11:08:12.766924: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/derm/anaconda3/envs/py39/lib/python3.9/site-packages/cv2/../../lib64:\n",
+      "2023-10-14 11:08:12.766963: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/derm/anaconda3/envs/py39/lib/python3.9/site-packages/cv2/../../lib64:\n",
+      "2023-10-14 11:08:12.766967: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-14 11:08:13.277355: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-10-14 11:08:13.295314: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-10-14 11:08:13.295435: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n"
+     ]
+    }
+   ],
    "source": [
     "from pillow_heif import register_heif_opener\n",
     "from matplotlib import pyplot as plt\n",
@@ -151,10 +180,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2517a7d7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Image(id=1, qvec=array([ 0.999353 , -0.0233756,  0.0228458,  0.0150278]), tvec=array([ 1.23533 ,  0.427223, -2.88256 ]), camera_id=1, name='IMG_2169.png', xys=array([[  47.4594,   25.7147],\n",
+      "       [ 189.823 ,   49.5671],\n",
+      "       [ 226.276 ,   45.3826],\n",
+      "       ...,\n",
+      "       [ 740.064 , 2150.46  ],\n",
+      "       [ 740.064 , 2150.46  ],\n",
+      "       [2818.75  , 2329.81  ]]), point3D_ids=array([   -1,    -1,    -1, ...,    -1,    -1, 11126]))\n",
+      "64\n",
+      "\n",
+      " Camera(id=10, model='SIMPLE_RADIAL', width=4032, height=3024, params=array([ 2.87601e+03,  2.01600e+03,  1.51200e+03, -3.87057e-02]))\n"
+     ]
+    }
+   ],
    "source": [
     "#load poses estimated by COLMAP\n",
     "\n",
@@ -173,12 +219,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "855265d5",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[ WARN:0@11.858] global /io/opencv/modules/imgcodecs/src/loadsave.cpp (239) findDecoder imread_('bike_images/IMG_2169.png'): can't open/read file: check file path/integrity\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for /: 'NoneType' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [4]\u001b[0m, in \u001b[0;36m<cell line: 12>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     65\u001b[0m     poses[n,\u001b[38;5;241m2\u001b[39m,\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m] \u001b[38;5;241m+\u001b[39m\u001b[38;5;241m=\u001b[39m \u001b[38;5;241m16\u001b[39m \u001b[38;5;66;03m#desk\u001b[39;00m\n\u001b[1;32m     66\u001b[0m \u001b[38;5;66;03m#     poses[n,2,-1] += 10 #bike\u001b[39;00m\n\u001b[1;32m     67\u001b[0m \n\u001b[1;32m     68\u001b[0m     \u001b[38;5;66;03m#downscale images\u001b[39;00m\n\u001b[1;32m     69\u001b[0m     \u001b[38;5;66;03m#sync order of images with order of poses\u001b[39;00m\n\u001b[0;32m---> 70\u001b[0m     temp \u001b[38;5;241m=\u001b[39m \u001b[43mcv2\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mimread\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mbike_images/\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[43mimages_from_colmap\u001b[49m\u001b[43m[\u001b[49m\u001b[43mn\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mname\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m/\u001b[39;49m\u001b[38;5;241;43m255\u001b[39;49m    \n\u001b[1;32m     71\u001b[0m \u001b[38;5;66;03m#     temp = cv2.imread(\"desk_images/\"+images_from_colmap[n+1].name)/255    \u001b[39;00m\n\u001b[1;32m     72\u001b[0m \u001b[38;5;66;03m#     temp = cv2.resize(temp, dsize=(250,250), interpolation=cv2.INTER_CUBIC)\u001b[39;00m\n\u001b[1;32m     73\u001b[0m \u001b[38;5;66;03m#     temp = cv2.resize(temp, dsize=(100,100), interpolation=cv2.INTER_LINEAR)\u001b[39;00m\n\u001b[1;32m     74\u001b[0m     temp \u001b[38;5;241m=\u001b[39m cv2\u001b[38;5;241m.\u001b[39mresize(temp, dsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m252\u001b[39m,\u001b[38;5;241m189\u001b[39m), interpolation\u001b[38;5;241m=\u001b[39mcv2\u001b[38;5;241m.\u001b[39mINTER_LINEAR)\n",
+      "\u001b[0;31mTypeError\u001b[0m: unsupported operand type(s) for /: 'NoneType' and 'int'"
+     ]
+    }
+   ],
    "source": [
     "#convert COLMAP poses (xyz,quats) to rotm\n",
     "\n",
@@ -324,10 +389,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "915c2917",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'poses' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 10>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;66;03m#debug coordinate system in <poses>\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \n\u001b[1;32m      3\u001b[0m \u001b[38;5;66;03m# #scale poses to unit cube\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m      8\u001b[0m \n\u001b[1;32m      9\u001b[0m \u001b[38;5;66;03m# camera_centers = ax.scatter3D(poses[:,0,-1],poses[:,1,-1],poses[:,2,-1])\u001b[39;00m\n\u001b[0;32m---> 10\u001b[0m headings \u001b[38;5;241m=\u001b[39m \u001b[43mposes\u001b[49m[:,:\u001b[38;5;241m3\u001b[39m,:\u001b[38;5;241m3\u001b[39m] \u001b[38;5;241m@\u001b[39m np\u001b[38;5;241m.\u001b[39marray([\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m0\u001b[39m,\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m1\u001b[39m]) \u001b[38;5;66;03m#old\u001b[39;00m\n\u001b[1;32m     12\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mvedo\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;241m*\u001b[39m\n\u001b[1;32m     13\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01mipyvtklink\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mviewer\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m ViewInteractiveWidget\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'poses' is not defined"
+     ]
+    }
+   ],
    "source": [
     "#debug coordinate system in <poses>\n",
     "\n",
@@ -384,6 +461,27 @@
     "## ax.quiver(poses[:,0,-1],poses[:,1,-1],poses[:,2,-1], headings[:,0], headings[:,1], headings[:,2], color = 'blue', alpha = 0.5)\n",
     "# print(len(poses))\n",
     "# plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "96ebcb59",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2.0"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "1//0.5"
    ]
   },
   {
