--- a/v3/nerf/tiny_nerf/render_demo.ipynb
+++ b/v3/nerf/tiny_nerf/render_demo.ipynb
@@ -8,7 +8,7 @@
    "source": [
     "import os, sys\n",
     "# os.environ['TF_FORCE_GPU_ALLOW_GROWTH'] = 'true'\n",
-    "os.environ['CUDA_VISIBLE_DEVICES'] = '1'\n",
+    "# os.environ['CUDA_VISIBLE_DEVICES'] = '1'\n",
     "import tensorflow as tf\n",
     "\n",
     "#limit GPU memory ------------------------------------------------\n",
@@ -47,8 +47,10 @@
    "outputs": [],
    "source": [
     "# basedir = './logs'\n",
-    "basedir = '/home/derm/nerf/logs' #pull data from desktop (too big to store on git repo)\n",
-    "expname = 'fern_example'\n",
+    "# basedir = '/home/derm/nerf/logs' #pull data from desktop (too big to store on git repo)\n",
+    "basedir = '/home/derm/ASAR/v3/nerf/tiny_nerf/logs'\n",
+    "# expname = 'fern_example'\n",
+    "expname = 'bike_test'\n",
     "\n",
     "config = os.path.join(basedir, expname, 'config.txt')\n",
     "print('Args:')\n",
@@ -56,7 +58,7 @@
     "parser = run_nerf.config_parser()\n",
     "\n",
     "# args = parser.parse_args('--config {} --ft_path {}'.format(config, os.path.join(basedir, expname, 'model_200000.npy')))\n",
-    "args = parser.parse_args('--config {} --ft_path {}'.format(config, os.path.join(basedir, expname, 'model_200000.npy')))\n",
+    "args = parser.parse_args('--config {} --ft_path {}'.format(config, os.path.join(basedir, expname, 'model_270000.npy')))\n",
     "print('loaded args')\n",
     "\n",
     "images, poses, bds, render_poses, i_test = load_llff_data(args.datadir, args.factor, \n",
@@ -117,11 +119,12 @@
     "pprint.pprint(render_kwargs_test)\n",
     "\n",
     "\n",
-    "down = 4\n",
+    "down = 1 #4\n",
     "render_kwargs_fast = {k : render_kwargs_test[k] for k in render_kwargs_test}\n",
     "render_kwargs_fast['N_importance'] = 0\n",
     "\n",
     "c2w = np.eye(4)[:3,:4].astype(np.float32) # identity pose matrix\n",
+    "# c2w[2,-1] = -2 #slide back a bit\n",
     "test = run_nerf.render(H//down, W//down, focal/down, c2w=c2w, **render_kwargs_fast)\n",
     "img = np.clip(test[0],0,1)\n",
     "plt.imshow(img)\n",
@@ -131,19 +134,53 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
-    "down = 8 # trade off resolution+aliasing for render speed to make this video faster\n",
+    "#debug render poses\n",
+    "poses = render_poses[::1].copy()\n",
+    "poses[:,:,3] = poses[:,:,3]*1.6\n",
+    "poses[:,:3,:3] = np.eye(3)\n",
+    "poses[:,:2,3] = poses[:,:2,3]*0. \n",
+    "print(poses)\n",
+    "\n",
+    "headings = poses[:,:3,:3] @ np.array([0,0,-1]) #old\n",
+    "\n",
+    "\n",
+    "\n",
+    "# from vedo import *\n",
+    "# from ipyvtklink.viewer import ViewInteractiveWidget\n",
+    "\n",
+    "# plt = Plotter(N = 1, axes = 1, bg = (1, 1, 1), interactive = True)\n",
+    "# disp=[]\n",
+    "# disp.append(Points(poses[:,:3,-2], c = \"#CB2314\"))\n",
+    "# disp.append(Arrows(poses[:,:3,-2], poses[:,:3,-2] + headings[:,:3], c = \"#CB2314\"))\n",
+    "# disp.append(Points(np.array([[0,0,0]]), c = 'black'))\n",
+    "\n",
+    "# plt.show(disp, \"camera poses\")\n",
+    "# ViewInteractiveWidget(plt.window)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "down = 1 #8 # trade off resolution+aliasing for render speed to make this video faster\n",
     "frames = []\n",
-    "for i, c2w in enumerate(render_poses):\n",
-    "# for i, c2w in enumerate(render_poses[:len(render_poses)//2]): #just render 10 frames\n",
-    "    if i%8==0: print(i)\n",
+    "# for i, c2w in enumerate(render_poses):\n",
+    "for i, c2w in enumerate(poses):\n",
+    "    if i%1==0: print(i)\n",
     "    test = run_nerf.render(H//down, W//down, focal/down, c2w=c2w[:3,:4], **render_kwargs_fast)\n",
     "    frames.append((255*np.clip(test[0],0,1)).astype(np.uint8))\n",
     "    \n",
     "print('done, saving')\n",
-    "f = 'fern_example_video.mp4'\n",
+    "f = 'bike_example_video_long.mp4'\n",
     "imageio.mimwrite(f, frames, fps=30, quality=8)\n",
     "\n",
     "from IPython.display import Video\n",
@@ -181,8 +218,8 @@
     "\n",
     "sldr = lambda : widgets.FloatSlider(\n",
     "    value=0.,\n",
-    "    min=-1.,\n",
-    "    max=1.,\n",
+    "    min=-3.,\n",
+    "    max=3.,\n",
     "    step=.01,\n",
     ")\n",
     "\n",
