--- a/v3/point_cloud_rectification/Experiment 1.ipynb
+++ b/v3/point_cloud_rectification/Experiment 1.ipynb
@@ -18,17 +18,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-08-25 14:28:48.088953: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2023-10-18 20:54:17.410019: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-08-25 14:28:48.185968: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2023-08-25 14:28:48.537622: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-08-25 14:28:48.537673: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
-      "2023-08-25 14:28:48.537678: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n",
-      "2023-08-25 14:28:49.142127: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-08-25 14:28:49.168428: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-08-25 14:28:49.168583: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-08-25 14:28:49.281452: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+      "2023-10-18 20:54:18.045887: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2023-10-18 20:54:19.116145: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
+      "2023-10-18 20:54:19.116241: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
+      "2023-10-18 20:54:19.116249: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n",
+      "2023-10-18 20:54:20.743937: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-10-18 20:54:20.843725: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-10-18 20:54:20.844030: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n"
      ]
     },
     {
@@ -42,13 +40,15 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-08-25 14:28:49.282204: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-08-25 14:28:49.282377: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-08-25 14:28:49.282502: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-08-25 14:28:49.627554: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-08-25 14:28:49.627728: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-08-25 14:28:49.627854: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-08-25 14:28:49.627948: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1616] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 4096 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3090, pci bus id: 0000:07:00.0, compute capability: 8.6\n"
+      "2023-10-18 20:54:21.180659: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2023-10-18 20:54:21.182286: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-10-18 20:54:21.182533: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-10-18 20:54:21.182726: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-10-18 20:54:22.147133: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-10-18 20:54:22.147291: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-10-18 20:54:22.147411: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-10-18 20:54:22.147500: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1616] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 4096 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3090, pci bus id: 0000:07:00.0, compute capability: 8.6\n"
      ]
     },
     {
@@ -106,19 +106,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "b721cf09",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9a901ec636834af891ef1bca4c449805",
+       "model_id": "1536b29d729e4d90aaa886c2917aad24",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "ViewInteractiveWidget(height=1043, layout=Layout(height='auto', width='100%'), width=1280)"
+       "ViewInteractiveWidget(height=960, layout=Layout(height='auto', width='100%'), width=960)"
       ]
      },
      "metadata": {},
@@ -127,9 +127,9 @@
    ],
    "source": [
     "#load HD Map\n",
-    "pl = '/media/derm/06EF-127D3/Newer College Dataset/new-college-29-01-2020-1cm-resolution-1stSection - mesh.ply'\n",
+    "pl = '/media/derm/06EF-127D4/Newer College Dataset/new-college-29-01-2020-1cm-resolution-1stSection - mesh.ply'\n",
     "HD_map = trimesh.load(pl).vertices\n",
-    "show_nth = 1 #10\n",
+    "show_nth = 5 #10\n",
     "submap = HD_map[::show_nth]\n",
     "plt = Plotter(N = 1, axes = 4, bg = (1, 1, 1), interactive = True)\n",
     "disp=[]\n",
@@ -140,26 +140,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "97228784",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'pc1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [3]\u001b[0m, in \u001b[0;36m<cell line: 23>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     19\u001b[0m poses \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39meinsum(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mij,njk->nik\u001b[39m\u001b[38;5;124m\"\u001b[39m, np\u001b[38;5;241m.\u001b[39mlinalg\u001b[38;5;241m.\u001b[39minv(poses[\u001b[38;5;241m0\u001b[39m]), poses)\n\u001b[1;32m     21\u001b[0m \u001b[38;5;66;03m# it = ICET(cloud1 = submap_in_pc1_frame, cloud2 = pc1, fid = 50, niter = 10, \u001b[39;00m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;66;03m#                draw = False, group = 2, RM = False, DNN_filter = False)\u001b[39;00m\n\u001b[0;32m---> 23\u001b[0m it \u001b[38;5;241m=\u001b[39m ICET(cloud1 \u001b[38;5;241m=\u001b[39m submap, cloud2 \u001b[38;5;241m=\u001b[39m \u001b[43mpc1\u001b[49m, fid \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m50\u001b[39m, niter \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m, \n\u001b[1;32m     24\u001b[0m                draw \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m, group \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m2\u001b[39m, RM \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m, DNN_filter \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;01mFalse\u001b[39;00m)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'pc1' is not defined"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-18 20:55:21.954673: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 122986656 exceeds 10% of free system memory.\n",
+      "2023-10-18 20:55:22.324119: W tensorflow/stream_executor/gpu/asm_compiler.cc:111] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
+      "\n",
+      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n",
+      "2023-10-18 20:55:22.326063: W tensorflow/stream_executor/gpu/asm_compiler.cc:230] Falling back to the CUDA driver for PTX compilation; ptxas does not support CC 8.6\n",
+      "2023-10-18 20:55:22.326077: W tensorflow/stream_executor/gpu/asm_compiler.cc:233] Used ptxas at ptxas\n",
+      "2023-10-18 20:55:22.326126: W tensorflow/compiler/mlir/tools/kernel_gen/transforms/gpu_kernel_to_blob_pass.cc:189] Failed to compile generated PTX with ptxas. Falling back to compilation by driver.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iter 0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2023-10-18 20:55:24.169233: I tensorflow/stream_executor/cuda/cuda_blas.cc:1614] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n",
+      "2023-10-18 20:55:24.250281: I tensorflow/core/util/cuda_solvers.cc:179] Creating GpuSolver handles for stream 0x7a6fe70\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iter 1\n",
+      "iter 2\n",
+      "iter 3\n",
+      "iter 4\n",
+      "iter 5\n",
+      "iter 6\n",
+      "iter 7\n",
+      "iter 8\n",
+      "iter 9\n",
+      "\n",
+      " estimated solution vector X: \n",
+      " tf.Tensor([ 1.7523313  -1.9042847   0.5371689   0.07737348  0.02877311 -0.0948403 ], shape=(6,), dtype=float32)\n"
      ]
     }
    ],
    "source": [
     "#load ground truth\n",
     "# [sec,nsec,x,y,z,qx,qy,qz,qw]\n",
-    "fn_gt = \"/media/derm/06EF-127D3/Newer College Dataset/05_Quad_With_Dynamics/registered_poses.csv\"\n",
+    "fn_gt = \"/media/derm/06EF-127D4/Newer College Dataset/05_Quad_With_Dynamics/registered_poses.csv\"\n",
     "gt = np.loadtxt(fn_gt, delimiter=',',skiprows = 1)\n",
     "seconds = gt[:, 0]\n",
     "nano_seconds = gt[:, 1]\n",
@@ -185,18 +222,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "7dc78b3c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3997\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2da464c98f654b87a46d3fb336d50ac5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "ViewInteractiveWidget(height=1314, layout=Layout(height='auto', width='100%'), width=1198)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "#put HD Map and new scan in frame of raw keyframe scan\n",
     "# idx = 2700 #2750 \n",
     "idx = 1800 #test\n",
     "skip = 25 #10 #how many lidar frames between keyframe and new scan\n",
     "offset = 10 #works best for 05 dataset\n",
-    "fn1 = \"/media/derm/06EF-127D3/Newer College Dataset/05_Quad_With_Dynamics/point_clouds/frame_\" + str(idx + offset) + \".npy\"\n",
-    "fn2 = \"/media/derm/06EF-127D3/Newer College Dataset/05_Quad_With_Dynamics/point_clouds/frame_\" + str(idx + skip + offset) + \".npy\"\n",
+    "fn1 = \"/media/derm/06EF-127D4/Newer College Dataset/05_Quad_With_Dynamics/point_clouds/frame_\" + str(idx + offset) + \".npy\"\n",
+    "fn2 = \"/media/derm/06EF-127D4/Newer College Dataset/05_Quad_With_Dynamics/point_clouds/frame_\" + str(idx + skip + offset) + \".npy\"\n",
     "pc1 = np.load(fn1)\n",
     "pc2 = np.load(fn2)\n",
     "plt = Plotter(N = 1, axes = 1, bg = (1, 1, 1), interactive = True) #axes = 4 (simple), 1(scale)\n",
