set up LIDAR intrinsics and data formatting

--- a/v3/nerf/desk_demo.ipynb
+++ b/v3/nerf/desk_demo.ipynb
@@ -20,12 +20,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-14 11:08:12.356144: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "2023-12-10 18:52:09.518807: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
       "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
-      "2023-10-14 11:08:12.436008: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
-      "2023-10-14 11:08:12.766924: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/derm/anaconda3/envs/py39/lib/python3.9/site-packages/cv2/../../lib64:\n",
-      "2023-10-14 11:08:12.766963: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/derm/anaconda3/envs/py39/lib/python3.9/site-packages/cv2/../../lib64:\n",
-      "2023-10-14 11:08:12.766967: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
+      "2023-12-10 18:52:09.604016: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2023-12-10 18:52:09.936478: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/derm/anaconda3/envs/py39/lib/python3.9/site-packages/cv2/../../lib64:\n",
+      "2023-12-10 18:52:09.936518: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory; LD_LIBRARY_PATH: /home/derm/anaconda3/envs/py39/lib/python3.9/site-packages/cv2/../../lib64:\n",
+      "2023-12-10 18:52:09.936523: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n"
      ]
     },
     {
@@ -39,9 +39,9 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-10-14 11:08:13.277355: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-10-14 11:08:13.295314: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
-      "2023-10-14 11:08:13.295435: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n"
+      "2023-12-10 18:52:10.471680: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-12-10 18:52:10.496305: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2023-12-10 18:52:10.496429: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n"
      ]
     }
    ],
@@ -63,7 +63,7 @@
     "print(gpus)\n",
     "if gpus:\n",
     "  try:\n",
-    "    memlim = 22*1024\n",
+    "    memlim = 12*1024\n",
     "    tf.config.experimental.set_virtual_device_configuration(gpus[0], [tf.config.experimental.VirtualDeviceConfiguration(memory_limit=memlim)])\n",
     "  except RuntimeError as e:\n",
     "    print(e)\n",
@@ -127,12 +127,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "e7faff78",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "IMG_2167.HEIC\n",
+      "IMG_2168.HEIC\n",
+      "IMG_2169.HEIC\n",
+      "IMG_2170.HEIC\n",
+      "IMG_2171.HEIC\n",
+      "IMG_2172.HEIC\n",
+      "IMG_2173.HEIC\n",
+      "IMG_2174.HEIC\n",
+      "IMG_2175.HEIC\n",
+      "IMG_2176.HEIC\n",
+      "IMG_2177.HEIC\n",
+      "IMG_2178.HEIC\n",
+      "IMG_2179.HEIC\n",
+      "IMG_2180.HEIC\n",
+      "IMG_2181.HEIC\n",
+      "IMG_2182.HEIC\n",
+      "IMG_2185.HEIC\n",
+      "IMG_2186.HEIC\n",
+      "IMG_2187.HEIC\n",
+      "IMG_2188.HEIC\n",
+      "IMG_2189.HEIC\n",
+      "IMG_2190.HEIC\n",
+      "IMG_2191.HEIC\n",
+      "IMG_2192.HEIC\n",
+      "IMG_2193.HEIC\n",
+      "IMG_2194.HEIC\n",
+      "IMG_2195.HEIC\n",
+      "IMG_2196.HEIC\n",
+      "IMG_2197.HEIC\n",
+      "IMG_2198.HEIC\n",
+      "IMG_2199.HEIC\n",
+      "IMG_2200.HEIC\n",
+      "IMG_2201.HEIC\n",
+      "IMG_2202.HEIC\n",
+      "IMG_2203.HEIC\n",
+      "IMG_2204.HEIC\n",
+      "IMG_2205.HEIC\n",
+      "IMG_2206.HEIC\n",
+      "IMG_2207.HEIC\n",
+      "IMG_2208.HEIC\n",
+      "IMG_2209.HEIC\n",
+      "IMG_2210.HEIC\n",
+      "IMG_2211.HEIC\n",
+      "IMG_2212.HEIC\n",
+      "IMG_2213.HEIC\n",
+      "IMG_2214.HEIC\n",
+      "IMG_2215.HEIC\n",
+      "IMG_2216.HEIC\n",
+      "IMG_2217.HEIC\n",
+      "IMG_2218.HEIC\n",
+      "IMG_2219.HEIC\n",
+      "IMG_2220.HEIC\n",
+      "IMG_2221.HEIC\n",
+      "IMG_2222.HEIC\n",
+      "IMG_2223.HEIC\n",
+      "IMG_2225.HEIC\n",
+      "IMG_2226.HEIC\n",
+      "IMG_2227.HEIC\n",
+      "IMG_2228.HEIC\n",
+      "IMG_2229.HEIC\n",
+      "IMG_2230.HEIC\n",
+      "IMG_2231.HEIC\n",
+      "IMG_2232.HEIC\n",
+      "IMG_2233.HEIC\n",
+      "IMG_2234.HEIC\n",
+      "IMG_2236.HEIC\n"
+     ]
+    }
+   ],
    "source": [
     "#loop through subdirectory and convert each .HEIC to similarly named .PNG\n",
     "register_heif_opener()\n",
@@ -229,7 +302,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[ WARN:0@11.858] global /io/opencv/modules/imgcodecs/src/loadsave.cpp (239) findDecoder imread_('bike_images/IMG_2169.png'): can't open/read file: check file path/integrity\n"
+      "[ WARN:0@80.227] global /io/opencv/modules/imgcodecs/src/loadsave.cpp (239) findDecoder imread_('bike_images/IMG_2169.png'): can't open/read file: check file path/integrity\n"
      ]
     },
     {
