--- a/v4/TODO.txt
+++ b/v4/TODO.txt
@@ -1,3 +1,4 @@
+DONE:
 > install VScode and g++
 > hello world c++
 > install eigen3
@@ -10,10 +11,21 @@
 > draw ellipsoid to show covariance of points
 > make function for displaying radial bounds
 > load in real point cloud data from external file
+> fit radial bounds to point cloud data
+> adapt code to support drawing multiple voxels
+> fit distributions to all points
+> accumulate HTWH HTWdz
 
-_ fit radial bounds to point cloud data
+
+TODO:
+_ Make dedicated ICET script, restrucutre code as single function
+_ update loadPointCloudCSV to pass in type of dataset
+_ Check condition -> L2 U2 lam
+_ get ouster point cloud velodyne msg to Eigen::MatrixXf
+_ Implement threading 
+_ 
+
+
+ICE BOX:
 _ convert voxels to modern openGL (vbo & vao)
-_ adapt code to support drawing multiple voxels
-
-
 _ convert points to modern openGL
