--- a/v3/nerf/CDF_NeRF.ipynb
+++ b/v3/nerf/CDF_NeRF.ipynb
@@ -2,12 +2,66 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "d3c43a5b",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-07-11 18:25:22.371773: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-07-11 18:25:22.472904: E tensorflow/stream_executor/cuda/cuda_blas.cc:2981] Unable to register cuBLAS factory: Attempting to register factory for plugin cuBLAS when one has already been registered\n",
+      "2024-07-11 18:25:22.887013: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer.so.7'; dlerror: libnvinfer.so.7: cannot open shared object file: No such file or directory\n",
+      "2024-07-11 18:25:22.887081: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libnvinfer_plugin.so.7'; dlerror: libnvinfer_plugin.so.7: cannot open shared object file: No such file or directory\n",
+      "2024-07-11 18:25:22.887086: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Cannot dlopen some TensorRT libraries. If you would like to use Nvidia GPU with TensorRT, please make sure the missing libraries mentioned above are installed properly.\n",
+      "2024-07-11 18:25:23.490846: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2024-07-11 18:25:23.517460: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2024-07-11 18:25:23.517660: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-07-11 18:25:23.633548: I tensorflow/core/platform/cpu_feature_guard.cc:193] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-07-11 18:25:23.634905: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2024-07-11 18:25:23.635275: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2024-07-11 18:25:23.635597: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2024-07-11 18:25:23.968147: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2024-07-11 18:25:23.968366: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2024-07-11 18:25:23.968529: I tensorflow/stream_executor/cuda/cuda_gpu_executor.cc:980] successful NUMA node read from SysFS had negative value (-1), but there must be at least one NUMA node, so returning NUMA node zero\n",
+      "2024-07-11 18:25:23.968675: I tensorflow/core/common_runtime/gpu/gpu_device.cc:1616] Created device /job:localhost/replica:0/task:0/device:GPU:0 with 4096 MB memory:  -> device: 0, name: NVIDIA GeForce RTX 3090, pci bus id: 0000:07:00.0, compute capability: 8.6\n"
+     ]
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "IPython.notebook.set_autosave_interval(180000)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Autosaving every 180 seconds\n"
+     ]
+    }
+   ],
    "source": [
     "#load requirements for working with PCs\n",
     "from vedo import *\n",
@@ -73,10 +127,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "6a50a64a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[PhysicalDevice(name='/physical_device:GPU:0', device_type='GPU')]\n"
+     ]
+    }
+   ],
    "source": [
     "from remove_motion_basic import linear_correction_old as lc\n",
     "\n",
@@ -122,27 +184,156 @@
     "idx = np.argwhere(rot_vel_euls < (-np.pi))\n",
     "rot_vel_euls[idx] = 0\n",
     "\n",
+    "show_nth = 10\n",
     "pl = '/media/derm/06EF-127D4/Newer College Dataset/new-college-29-01-2020-1cm-resolution-1stSection - mesh.ply'\n",
-    "HD_map = trimesh.load(pl).vertices\n",
-    "show_nth = 5 #10\n",
-    "submap = HD_map[::show_nth]"
+    "mapPt1 = trimesh.load(pl).vertices\n",
+    "submap1 = mapPt1[::show_nth]\n",
+    "mapPt2 = '/media/derm/06EF-127D4/Newer College Dataset/new-college-29-01-2020-1cm-resolution-2ndSection.ply'\n",
+    "mapPt2 = trimesh.load(mapPt2).vertices\n",
+    "submap2 = mapPt2[::show_nth] \n",
+    "# disp.append(Points(submap2, c = 'gray', alpha = 0.03))\n",
+    "mapPt3 = '/media/derm/06EF-127D4/Newer College Dataset/new-college-29-01-2020-1cm-resolution-3rdSection.ply'\n",
+    "mapPt3 = trimesh.load(mapPt3).vertices\n",
+    "submap3 = mapPt3[::show_nth] \n",
+    "# disp.append(Points(submap3, c = 'gray', alpha = 0.03))\n",
+    "mapPt4 = '/media/derm/06EF-127D4/Newer College Dataset/new-college-29-01-2020-1cm-resolution-4thSection.ply'\n",
+    "mapPt4 = trimesh.load(mapPt4).vertices\n",
+    "submap4 = mapPt4[::show_nth] \n",
+    "# disp.append(Points(submap4, c = 'gray', alpha = 0.03))\n",
+    "mapPt5 = '/media/derm/06EF-127D4/Newer College Dataset/new-college-29-01-2020-1cm-resolution-5thSection.ply'\n",
+    "mapPt5 = trimesh.load(mapPt5).vertices\n",
+    "submap5 = mapPt5[::show_nth] \n",
+    "# disp.append(Points(submap5, c = 'gray', alpha = 0.03))\n",
+    "# submap = np.concatenate((submap1, submap2, submap3, submap4, submap5), axis = 0)\n",
+    "submap = submap1"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "4ab5db62",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "89ebe01e",
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-07-11 18:25:46.357911: W tensorflow/stream_executor/gpu/asm_compiler.cc:111] *** WARNING *** You are using ptxas 10.1.243, which is older than 11.1. ptxas before 11.1 is known to miscompile XLA code, leading to incorrect results or invalid-address errors.\n",
+      "\n",
+      "You may not need to update to CUDA 11.1; cherry-picking the ptxas binary is often sufficient.\n",
+      "2024-07-11 18:25:46.362190: W tensorflow/stream_executor/gpu/asm_compiler.cc:230] Falling back to the CUDA driver for PTX compilation; ptxas does not support CC 8.6\n",
+      "2024-07-11 18:25:46.362201: W tensorflow/stream_executor/gpu/asm_compiler.cc:233] Used ptxas at ptxas\n",
+      "2024-07-11 18:25:46.362240: W tensorflow/compiler/mlir/tools/kernel_gen/transforms/gpu_kernel_to_blob_pass.cc:189] Failed to compile generated PTX with ptxas. Falling back to compilation by driver.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iter 0\n",
+      "iter 1\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-07-11 18:25:47.007498: I tensorflow/stream_executor/cuda/cuda_blas.cc:1614] TensorFloat-32 will be used for the matrix multiplication. This will only be logged once.\n",
+      "2024-07-11 18:25:47.083347: I tensorflow/core/util/cuda_solvers.cc:179] Creating GpuSolver handles for stream 0x5633939ebd40\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "iter 2\n",
+      "iter 3\n",
+      "iter 4\n",
+      "iter 5\n",
+      "iter 6\n",
+      "iter 7\n",
+      "\n",
+      " estimated solution vector X: \n",
+      " tf.Tensor([-0.05310939  0.03976472 -0.01195141  0.00539792 -0.00078317 -0.00141485], shape=(6,), dtype=float32)\n",
+      "1\n",
+      "iter 0\n",
+      "iter 1\n",
+      "iter 2\n",
+      "iter 3\n",
+      "iter 4\n",
+      "iter 5\n",
+      "iter 6\n",
+      "iter 7\n",
+      "\n",
+      " estimated solution vector X: \n",
+      " tf.Tensor([ 0.00786005  0.05795393  0.00965397 -0.01863872 -0.00395854  0.01836294], shape=(6,), dtype=float32)\n",
+      "2\n",
+      "iter 0\n",
+      "iter 1\n",
+      "iter 2\n",
+      "iter 3\n",
+      "iter 4\n",
+      "iter 5\n",
+      "iter 6\n",
+      "iter 7\n",
+      "\n",
+      " estimated solution vector X: \n",
+      " tf.Tensor([ 0.18001609  0.03675067 -0.03349416 -0.0156811   0.0121488   0.01268974], shape=(6,), dtype=float32)\n",
+      "3\n",
+      "iter 0\n",
+      "iter 1\n",
+      "iter 2\n",
+      "iter 3\n",
+      "iter 4\n",
+      "iter 5\n",
+      "iter 6\n",
+      "iter 7\n",
+      "\n",
+      " estimated solution vector X: \n",
+      " tf.Tensor([ 0.18705319  0.04593619 -0.05939295  0.01659851 -0.00265893 -0.02250255], shape=(6,), dtype=float32)\n",
+      "4\n",
+      "iter 0\n",
+      "iter 1\n",
+      "iter 2\n",
+      "iter 3\n",
+      "iter 4\n",
+      "iter 5\n",
+      "iter 6\n",
+      "iter 7\n",
+      "\n",
+      " estimated solution vector X: \n",
+      " tf.Tensor([ 0.22732288  0.08877128  0.04685634  0.01084292  0.01222606 -0.00542191], shape=(6,), dtype=float32)\n",
+      "num poses: 640\n",
+      "n_rots: 128\n",
+      "n_cols_to_skip: 16\n",
+      "(640,)\n"
+     ]
+    }
+   ],
    "source": [
     "#  undistort raw point clouds, define patch sizes,\n",
     "#  take patches about useful regions of the scene, and record poses for each patch \n",
     "\n",
     "from time import sleep\n",
     "#convert gt from xyzquat to homogenous rotation matrix\n",
-    "n_images = 3 #1000 #50 \n",
+    "n_images = 5 #1000 #50 \n",
     "n_rots = 128 #128    #number of horizontal patches in 360 degrees\n",
     "n_vert_patches = 1 #8 #number of vertical patches between phimin and phimaxs\n",
     "\n",
@@ -175,10 +366,10 @@
     "    #2nd courtyard\n",
     "#     idx = i*60 + 1500\n",
     "    #full loop first courtyard\n",
-    "    idx = i + 7800 \n",
-    "#     idx = i*10 + 7700\n",
-    "    #test simple part of map\n",
-    "#     idx = i*10 + 8400\n",
+    "#     idx = i + 7800 \n",
+    "    idx = i*10 + 7700\n",
+    "    #test woods\n",
+    "#     idx = i*1000 + 9500\n",
     "    fn1 = \"/media/derm/06EF-127D4/Newer College Dataset/01_Short_Experiment/point_clouds/frame_\" + str(idx) + \".npy\"\n",
     "    pc1 = np.load(fn1)\n",
     "    \n",
@@ -196,7 +387,7 @@
     "\n",
     "    pc1 = np.flip(pc1, axis = 0)# uncomment to flip and maintain CCW convention used in VICET\n",
     "\n",
-    "    # TEST-- Register undistorted PC against HD Map using ICET to correct issues in ground truth------------------------\n",
+    "    #Register undistorted PC against HD Map using ICET to correct issues in ground truth------------------------\n",
     "    submap_in_pc1_frame = (np.linalg.pinv(sensor_poses[idx]) @ initial_pose @ np.append(submap, np.ones([len(submap),1]), axis =1).T).T #test\n",
     "    submap_in_pc1_frame = submap_in_pc1_frame[:,:3]\n",
     "\n",
@@ -357,10 +548,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "3c0cafcc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "737d6ccf01d44daf86304dcda7f106f3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "ViewInteractiveWidget(height=960, layout=Layout(height='auto', width='100%'), width=960)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#draw subsequent scans aligned using poses with redfix\n",
     "plt = Plotter(N = 1, axes = 1, bg = (1, 1, 1), interactive = True) #axes = 4 (simple), 1(scale)\n",
@@ -369,9 +576,9 @@
     "colors = ['red', 'orange', 'yellow', 'green', 'blue']\n",
     "\n",
     "for i in range(3):\n",
-    "    idx = i + 7800\n",
-    "#     idx = i*10 + 8400\n",
-    "    \n",
+    "    idx = i*10 + 7700\n",
+    "#     idx = i*10 + 1200\n",
+    "\n",
     "    fn1 = \"/media/derm/06EF-127D4/Newer College Dataset/01_Short_Experiment/point_clouds/frame_\" + str(idx) + \".npy\"\n",
     "    pc1 = np.load(fn1)\n",
     "#     # distortion correction ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~\n",
