fixed data generation pipeline to match sensor z axis convention, put together pipeline for getting L1CD from nerf data in gt frames, need to retrain now

--- a/v3/nerf/chamfer_distance.ipynb
+++ b/v3/nerf/chamfer_distance.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 26,
    "id": "883a67e2",
    "metadata": {},
    "outputs": [
@@ -10,41 +10,30 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    },
-    {
-     "data": {
-      "application/javascript": [
-       "IPython.notebook.set_autosave_interval(180000)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Autosaving every 180 seconds\n",
-      "(52183,)\n",
-      "(52183, 3)\n",
+      "(49152,)\n",
+      "(47725, 3)\n",
       "(65536, 3)\n"
      ]
     }
    ],
    "source": [
     "import numpy as np\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n",
-    "%autosave 180\n",
+    "# %load_ext autoreload\n",
+    "# %autoreload 2\n",
+    "# %autosave 180\n",
     "\n",
-    "nerf_pc = np.load(\"lidar_nerf_demo/generated_pc_at_start.npy\")\n",
-    "real_pc = np.load(\"lidar_nerf_demo/real_pc_at_start.npy\")\n",
-    "\n",
+    "# nerf_pc = np.load(\"lidar_nerf_demo/generated_pc_at_start.npy\")\n",
+    "# real_pc = np.load(\"lidar_nerf_demo/real_pc_at_start.npy\")\n",
     "# nerf_pc = np.random.randn(1000,3)\n",
     "# real_pc = np.random.randn(1000,3)\n",
+    "nerf_pc = np.load(\"generatedPointClouds/7800NeRF.npy\")\n",
+    "real_pc = np.load(\"generatedPointClouds/7800real.npy\")\n",
+    "\n",
+    "# #debug: create simple pc\n",
+    "# nerf_pc = np.array([[0,0,0], \n",
+    "#                     [1,1,1]])\n",
+    "# real_pc = np.array([[0,0,0], \n",
+    "#                     [0,0,0]])\n",
     "\n",
     "d = np.sqrt(np.sum(nerf_pc**2, axis = 1))\n",
     "print(np.shape(d))\n",
@@ -56,16 +45,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "f2446fe1",
-   "metadata": {},
-   "source": [
-    "# TODO remove points at origin "
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 27,
    "id": "012d4ddf",
    "metadata": {},
    "outputs": [
@@ -73,15 +54,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([1, 52183, 3])\n",
-      "tensor(0.1999)\n"
+      "torch.Size([1, 47725, 3])\n",
+      "tensor(0.0298)\n"
      ]
     }
    ],
    "source": [
     "import torch\n",
     "from chamferdist import ChamferDistance\n",
-    "\n",
     "\n",
     "real_pc = torch.tensor(real_pc)\n",
     "nerf_pc = torch.tensor(nerf_pc)\n",
@@ -96,7 +76,6 @@
     "nerf_pc = nerf_pc.float()\n",
     "print(nerf_pc.shape)\n",
     "\n",
-    "\n",
     "chamferDist = ChamferDistance()\n",
     "dist_forward = chamferDist(nerf_pc, real_pc)\n",
     "print(dist_forward/ nerf_pc.shape[1])"
@@ -104,14 +83,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 28,
    "id": "2462bf70",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c51be40a3f1542b5a951e04e81e09ea4",
+       "model_id": "c5fc2fc8f4234e90aa6373d360a47eac",
        "version_major": 2,
        "version_minor": 0
       },
@@ -119,7 +98,7 @@
        "ViewInteractiveWidget(height=960, layout=Layout(height='auto', width='100%'), width=960)"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -160,7 +139,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1f90a4ae",
+   "id": "ea649448",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d3e3277a",
+   "id": "de489663",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -182,7 +161,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4acef2f5",
+   "id": "d84252bb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -192,7 +171,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f49a2e23",
+   "id": "2dd8c7bb",
    "metadata": {},
    "outputs": [],
    "source": []
